@@ -46,7 +46,7 @@ dnl Minimum version of autoconf required.  Should coincide with the
 dnl setting in the autogen.sh script.
 AC_PREREQ(2.52)
 
-AC_INIT(BZFlag, 2.1.6, [http://BZFlag.org], bzflag)
+AC_INIT(BZFlag, 2.1.14, [http://BZFlag.org], bzflag)
 AC_CONFIG_SRCDIR(src/bzflag/bzflag.cxx)
 AC_REVISION($Revision$)
 
