@@ -78,6 +78,8 @@ class PingPacket {
     uint8_t		purpleMax;
     uint8_t		observerCount;
     uint8_t		observerMax;
+    
+    int                 pingTime; //ms - is not set when packet is read
 
   private:
     static int		hex2bin(char);
